  - $config->smart_image_uploads_url() is no longer used, and outputs deprecated messages to log.
  - new define in cms_config class CMS_UPLOADS_URL
  - Remove GUI functionality for managing UDT's (udt's will be replaced by simple_plugins)
  - Replace OneEleven admin theme with the Marigold fork that uses fontawesome.

CMSContentManager - remember to bump version
  - Gets rid of secure options, flag output and bulk functionaltiy
  - modified to use CMS_ROOT_URL

FileManager - remember to bump version
  - modified to use CMS_ROOT_URL

Version 2.2.2 - Hearts Content
----------------------------------
Core - General
 - Additional security improvement in CMSModule::GetTemplateResource().
 - Now Smarty_CMS is no longer derived from SmartyBC (uses our own wrapper class) which prevents all occurrences of {php} tags from running.
 - Adds an admin directory .htaccess file to explicitly disable browser caching of any resources.
 - Fixes a relative path vulnerability in module_file_tpl resource.
 - Fixes a path building issue in CmsModuleInfo.
 - Fixes to parsing and generating moduleinfo.ini files.
 - Disallow any resource specifications with a * or a /.
     * This also means that no file resource specifications with path information will be permitted.
 - Move mact preprocessing to AFTER the template_top has been processed.  So order of processing (for module actions on the frontend is)
     a:  template top
     b:  mact preprocessing (if enabled, which is the default)
     c:  template body
     d:  template head
 - Fix sureGetNodeByAlias to check if the input is numeric. If it is, assume that it is a page id, not an alias.
 - Fix alias generation in the ContentBase class to check if the input page title is numeric... If it is, prepend a character to it to ensure that integer casting will return 0.
 - Fix listtags to show tags using smarty_nocache_  function name prefix.
 - Improvements to the {form_start} plugin.
 - Fix silly, old issue in recursive_delete function.