@@ -13,6 +13,8 @@ Core - General
   - new define in cms_config class CMS_UPLOADS_URL
   - Remove GUI functionality for managing UDT's (udt's will be replaced by simple_plugins)
   - Replace OneEleven admin theme with the Marigold fork that uses fontawesome.
+  - Sitedown mode now throws a 503 exception and outputs a 503 error code
+  - The 503 error handler (maintenance mode) is now an Error Page. 
 
 CMSContentManager - remember to bump version
   - Gets rid of secure options, flag output and bulk functionaltiy
